fixed meet-memo alignment, address bar now changes dynamically on scroll

--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,6 @@ h2 {
   height: 100vh;
   position: relative;
   z-index: 1;
-  overflow: hidden;
 }
 
 #meet-memo p {
@@ -137,27 +136,18 @@ h2 {
 .meet-memo-container{
   height:92vh;
   z-index: 1;
-}
-
-.meet-memo-container:before {
   background: url("media/packaging-contents.jpg");
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center center;
-  transform: translate(-50%, 10%);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  content: "";
-  z-index: -1;
+  background-position: center calc(100% + 100px);
 }
 
 .package-img{
   height: 60vh;
 }
 
-#features {
-  height: 100vh;
+.section {
+  height: 100%;
 }
 
 .features-container {
